添加N repeated的三种解法

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(test)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(test main.cpp Label-Easy/JewelAndStone.cpp)
+add_executable(test main.cpp Label-Easy/JewelAndStone.cpp Label-Easy/N-Repeated-Element-in-Size-2N-Array.cpp)
